--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "/postinstall.js",
     "/src",
     "/ppx",
+    "/ppx.cmd",
     "/ppx-linux.exe",
-    "/ppx-osx.exe"
+    "/ppx-macos.exe",
+    "/ppx-windows.exe"
   ],
   "keywords": [],
   "license": "MIT",
