--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -8,7 +8,7 @@ jobs:
 - job: Linux
   timeoutInMinutes: 0
   pool:
-    vmImage: 'Ubuntu 20.04'
+    vmImage: ubuntu-16.04
 
   variables:
     PPX_EXE: ppx-linux.exe
@@ -73,7 +73,7 @@ jobs:
       - Windows
   condition: succeeded()
   pool:
-     vmImage: 'Ubuntu 20.04'
+     vmImage: ubuntu-16.04
 
   variables:
     artifact-linux: binary-Linux
